Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-27809

Misleading information in the dialog when a file in project has been externally changed on macOS

    XMLWordPrintable

Details

    • macOS
    • 934bc75cee (qt-creator/qt-creator/master) 934bc75cee (qt-creator/qt-creator/qds-dev) 934bc75cee (qt-creator/qt-creator/9.0)

    Description

      When a file in a project has externally changed, the default behavior is that dialog pops up and informs that the file has been changed on a disk etc. However instruction for changing this default behavior is wrong for macOS. (Please see the attached image.)

      The dialog says that:
      "... The default behavior can be set in Tools > Options > Environment > System"

      When on macOS it should actually say:
      "... The default behavior can be set in Qt Creator > Preferences > Environment > System"

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            con Eike Ziller
            foxxx Tuukka Kettunen
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes