macOS: Fix description where to change reload settings

in the dialog that asks you what to do when a file changed on disk.

Fixes: QTCREATORBUG-27809
Change-Id: I47b3a7287c725c8f4d37564c1b6a9788665e345e
Reviewed-by: <github-actions-qt-creator@cristianadam.eu>
Reviewed-by: Leena Miettinen <riitta-leena.miettinen@qt.io>
Reviewed-by: Christian Stenger <christian.stenger@qt.io>